syntax = "proto3";

option java_package = "io.xdag.p2p.proto";
option java_outer_classname = "Discover";

message Peer {
  bytes address = 1;
  int32 port = 2;
  bytes nodeId = 3;
  bytes addressIpv6 = 4;
}

message PingMessage {
  Peer from = 1;
  Peer to = 2;
  int32 version = 3;
  int64 timestamp = 4;
}

message PongMessage {
  Peer from = 1;
  int32 echo = 2;
  int64 timestamp = 3;
}

message FindNeighbours {
  Peer from = 1;
  bytes targetId = 2;
  int64 timestamp = 3;
}

message Neighbours {
  Peer from = 1;
  repeated Peer neighbours = 2;
  int64 timestamp = 3;
}

message Peers {
  repeated Peer peer = 1;
}

message DnsRoot {
  message TreeRoot {
    bytes eRoot = 1;
    bytes lRoot = 2;
    int32 seq = 3;
  }
  TreeRoot treeRoot = 1;
  bytes signature = 2;
}
